@@ -2,7 +2,7 @@ package org.hyperledger.iroha.android.client;
 
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
-import java.util.Map;
+import java.util.Collections;
 import org.hyperledger.iroha.android.client.testing.FakeHttpTransportExecutor;
 import org.hyperledger.iroha.android.client.transport.TransportRequest;
 import org.hyperledger.iroha.android.client.transport.TransportResponse;
@@ -22,7 +22,8 @@ public final class HttpTransportExecutorFakeTests {
   private static void shouldReturnPathSpecificResponses() {
     final FakeHttpTransportExecutor executor = new FakeHttpTransportExecutor();
     final TransportResponse pathResponse =
-        new TransportResponse(202, "ok".getBytes(StandardCharsets.UTF_8), "", Map.of());
+        new TransportResponse(
+            202, "ok".getBytes(StandardCharsets.UTF_8), "", Collections.emptyMap());
     executor.enqueueResponse("/v1/pipeline/transactions", pathResponse);
 
     final TransportRequest request =
@@ -40,7 +41,8 @@ public final class HttpTransportExecutorFakeTests {
   private static void shouldUseGlobalQueueWhenPathQueueIsEmpty() {
     final FakeHttpTransportExecutor executor = new FakeHttpTransportExecutor();
     final TransportResponse globalResponse =
-        new TransportResponse(201, "global".getBytes(StandardCharsets.UTF_8), "", Map.of());
+        new TransportResponse(
+            201, "global".getBytes(StandardCharsets.UTF_8), "", Collections.emptyMap());
     executor.enqueueResponse(globalResponse);
 
     final TransportRequest request =
@@ -55,7 +57,8 @@ public final class HttpTransportExecutorFakeTests {
 
   private static void shouldUseDefaultResponseWhenQueuesEmpty() {
     final FakeHttpTransportExecutor executor = new FakeHttpTransportExecutor();
-    executor.setDefaultResponse(new TransportResponse(503, new byte[0], "", Map.of()));
+    executor.setDefaultResponse(
+        new TransportResponse(503, new byte[0], "", Collections.emptyMap()));
 
     final TransportRequest request =
         TransportRequest.builder()
@@ -68,10 +71,12 @@ public final class HttpTransportExecutorFakeTests {
 
   private static void shouldResetQueues() {
     final FakeHttpTransportExecutor executor = new FakeHttpTransportExecutor();
-    executor.enqueueResponse("/foo", new TransportResponse(200, new byte[0], "", Map.of()));
-    executor.enqueueResponse(new TransportResponse(201, new byte[0], "", Map.of()));
+    executor.enqueueResponse(
+        "/foo", new TransportResponse(200, new byte[0], "", Collections.emptyMap()));
+    executor.enqueueResponse(new TransportResponse(201, new byte[0], "", Collections.emptyMap()));
     executor.clear();
-    executor.setDefaultResponse(new TransportResponse(404, new byte[0], "", Map.of()));
+    executor.setDefaultResponse(
+        new TransportResponse(404, new byte[0], "", Collections.emptyMap()));
 
     final TransportRequest request =
         TransportRequest.builder()
